# wf

./: .clang-tidy  .cppcheck-suppressions  .gitignore  Makefile.am  configure.ac
.github/agents/: review-symmetry-consistency-coverage.agent.md  review-user-eye-blunt.agent.md
.github/instructions/: pre-commit-review.instructions.md
completions/: wf.bash
docs/: requirements.md
po/: ja.po  wf.pot
src/: Makefile.am  auth.c  auth.h  cmd.c  cmd.h  domain.c  domain.h  i18n.c  i18n.h  issue.c  issue.h  main.c  storage.c  storage.h  util.c  util.h
tests/: README.md  run.sh
tests/cli/: 00_help.sh  01_version.sh  05_i18n_locale.sh  06_bash_completion.sh  10_unknown_ambiguous.sh  15_auth_exec_env.sh  16_whoami.sh  20_prefix_dispatch.sh  30_issue_sub_prefix.sh  40_issue_review_conditions.sh
tests/unit/: test_match.c
